Add test cases for Find Command, add test cases for Supplier